--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   http: ^0.13.6
   flutter_bloc: ^8.1.3
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
